Update sqlite.md